sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false4b/errors.netconvert
Error: A non-numeric value occured in shape definition for edge '4'.
Quitting (on error).
